--- a/second.HTML
+++ b/second.HTML
@@ -6,5 +6,59 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>heading1</h1>
+    <h2>heading2</h2>
+    <h3>heading3</h3>
+    <h4>heading4</h4>
+    <h5>heading5</h5>    
+    <h6>heading6</h6>
+    <p>paragraph</p>
+    <span>hello</span>
+    <span>in a developer</span>
+    <h2>data</h2>
+    <div>div1</div>
+    <div>div2</div>
+<!--orderd list -->
+<ol>
+    <li>html 5</li>
+    <ol>
+        <li>heading</li>
+        <li>paragraphs</li>
+        <li>elements</li>
+    </ol>
+    <li>css</li>
+<li>javascript</li>
+<li>bootspring</li>
+</ol>
+<!-- unorderd list -->
+<ul>
+    <li>fruits</li>
+    <ul>
+        <li>apple</li>
+        <ul>
+            <li>green apple</li>
+            <li>red apple</li>
+        </ul>
+        <li>mango</li>
+        <li>banana</li>
+    </ul>
+    <li>vegitables</li>
+    <ul>
+        <li>tomato</li>
+        <li>potato</li>
+        <li>carrot</li>
+    </ul>
+    <li> <u>non veg</u></li>
+    <ul>
+        <li>chicken</li>
+        <li>fish</li>
+</ul>
+
+
+    <dl>
+        <dt><u>tea</u></dt>
+        <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae vel explicabo voluptas? Quidem explicabo eum rem dicta, commodi reprehenderit voluptate incidunt quisquam exercitationem suscipit deserunt quos, fuga, nam repellendus?</dd>
+    </dl>
+</ul>
 </body>
 </html>
