--- a/second.HTML
+++ b/second.HTML
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    
     <h1>heading1</h1>
     <h2>heading2</h2>
     <h3>heading3</h3>
@@ -15,11 +16,11 @@
     <p>paragraph</p>
     <span>hello</span>
     <span>in a developer</span>
-    <h2>data</h2>
+    <h2>data</h2><hr>
     <div>div1</div>
     <div>div2</div>
 <!--orderd list -->
-<ol>
+<ol><hr>
     <li>html 5</li>
     <ol>
         <li>heading</li>
@@ -53,12 +54,56 @@
         <li>chicken</li>
         <li>fish</li>
 </ul>
-
+<hr>
 
     <dl>
         <dt><u>tea</u></dt>
         <dd>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima molestiae vel explicabo voluptas? Quidem explicabo eum rem dicta, commodi reprehenderit voluptate incidunt quisquam exercitationem suscipit deserunt quos, fuga, nam repellendus?</dd>
     </dl>
-</ul>
+    <dl>
+        <hr>
+        <dt>coffie</dt>
+        <dd>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, rem tenetur aspernatur tempore blanditiis quis eligendi ullam! Soluta, odio a? Illum excepturi maiores vel porro magnam repellendus, dolores doloremque maxime!</dd>
+    </dl>
+
+    <!-- tables -->
+    <table border="21">
+        <tr>
+            <th>s.no</th>
+            <th>name</th>
+            <th>roll no</th>
+            <th>collage name</th>
+        </tr>
+        <TR>
+        <td>1</td>
+        <td>sriman</td>
+        <td>12b3</td>
+        <td>KITS</td>
+        </TR>
+        <tr>
+            <td>2</td>
+            <td>pavan</td>
+            <td>12a4</td>
+            <td>KITS</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>jayanth</td>
+            <td>12a2</td>
+            <td>KITS</td>
+        </tr>
+    </table>
+
+
+    <!-- forms -->
+    <form><hr>
+        <label for="">name:</label>
+        <input type="text" value="enter name😉" size="23"><br>
+        <input type="button" value="submit" size="23"><br>
+        <label for="">languages known: </label>
+        <input type="text" value="enter language" size="23"><br>
+        <input type="button" value="submit" size="23">
+        
+        </form>
 </body>
 </html>
