--- a/second.HTML
+++ b/second.HTML
@@ -102,8 +102,17 @@
         <input type="button" value="submit" size="23"><br>
         <label for="">languages known: </label>
         <input type="text" value="enter language" size="23"><br>
-        <input type="button" value="submit" size="23">
-        
-        </form>
+        <input type="button" value="submit" size="23"><br>
+        <label for="">gender:</label>
+        <input type="checkbox" name="id=">male
+        <input type="checkbox"name="id=">female <br>
+        <label for="">passwword:</label>
+        <input type="password" value="" size="23"> <br>
+        <label for="">date:</label>
+        <input type="date" name="" id="">
+        <input type="color" name="" id=""> <br>
+        <label for="">email</label>
+        <input type="email" name="" id="">
+</form>
 </body>
 </html>
